# toy_glens_kinematics

./: .gitignore  MNRAS_paper_draft_claude.md  README.md  Referee Review of Lens Finding Methods.md  requirements.txt  strategic_answers_Q1_Q4_claude.md
dark_halo_scope/: .gitignore  HANDOFF.md  README.md  README_phase3_parent_sample.md  planb_llm_review_prompt.md  pyproject.toml  requirements.txt
dark_halo_scope/dhs_experiment_matrix_code/: EXPERIMENT_MATRIX.md  README.md  requirements.txt
dark_halo_scope/dhs_gen/: SPARK_INTEGRATION.md  __init__.py  pyproject.toml
dark_halo_scope/dhs_gen6_gen7_gen8_uber_code_fixed/: INDEPENDENT_REVIEW.md  README.md
dark_halo_scope/docs/: BLUEPRINT.md  BUILD_PLAN_OPTION_B.md  cosmos_galsim_llm_response_review.md  gen5_auditable_remediation_plan.md  gen5_cosmos_bank_creation.md  gen5_phase4c_llm_review.md  gen5_phase4c_preflight.md  gen5_phase4c_ready_to_launch.md  gen5_phase4c_review_prompt.md  gen5_pipeline_config_tracking.md  gen5_prime_full_plan.md  gen5_remaining_steps.md  gen5_remediation_action_plan.md  gen5_remediation_full_llm_report.md  gen6_gen7_gen8_full_spec.md  gen6_gen7_gen8_priority_plan.md  llm_independent_review_prompt.md  llm_prompt_gen6_gen7_gen8_strategy.md  llm_reply_corrected_brightness.md  llm_reply_lrg_sampling_details.md  llm_reply_shortcut_discovery.md  llm_review_gen5_failure_analysis.md  llm_review_gen6_gen7_gen8_v2.md  paper_preparation_notes.md  phase1_limitations.md  phase1_parameters.md  phase1_sanity_gates_report.md  phase1_validation_results.md  phase5_exploration_tasks.md  pipeline_parity_check_results.md  research_plan_1_shortcut_mitigation.md  research_plan_2_gen7_procedural_realism.md  research_plan_3_gen8_domain_randomization.md  research_plan_4_gen6_deep_sources.md  research_plan_5_uber_ensemble.md  s3_locations_reference.md
dark_halo_scope/emr/: README_phase1p5_emr.md  README_phase2_emr.md  bootstrap_phase3_pipeline_install_deps.sh  bootstrap_phase3p5_compact.sh  bootstrap_phase4_pipeline_install_deps.sh  deprecated_bootstrap_phase3_install_deps_copy.sh  deprecated_submit_phase3_emr_cluster.py  phase3c_validation_report.json  spark_analyze_phase4d.py  spark_compress_parquet.py  spark_phase1p5_lrg_density.py  spark_phase2_lrg_hypergrid.py  spark_phase3p5_compact.py  spark_phase4_pipeline.py  (+12 more)
(+884 files in other folders)
